--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "leasify/nova-s3-multipart-upload",
     "description": "Leasify overtake: A Laravel Nova s3 multipart upload tool.",
     "keywords": [
+        "leasify",
         "laravel",
         "nova",
         "aws",
